# scaleservers-arm-assembly

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
scaleservers-arm32-assembly/: Cargo.toml  LICENSE-APACHE  NOTICE  README.md
scaleservers-arm32-assembly/examples/: arm32_hardware_exec_gen.rs
scaleservers-arm32-assembly/src/: arm32_decode_context.rs  arm32_instruction.rs  arma32_instruction.rs  armt32_instruction.rs  emit.rs  enums.rs  errors.rs  floating_point_immediate.rs  lib.rs  targets.rs  tests.rs  utils.rs
scaleservers-arm32-assembly/src/emit/: arm_a32_assembly_emitter.rs  arm_assembly_emitter.rs  arm_assembly_syntax.rs
scaleservers-arm32-assembly/src/enums/: arm32_block_address_mode.rs  arm32_cps_mode.rs  arm32_directed_round.rs  arm32_extend_type.rs  arm32_memory_offset.rs  arm32_mve_operations.rs  arm32_mve_registers.rs  arm32_neon_load_store_address.rs  arm32_neon_operations.rs  arm32_shift_type.rs  arm32_vmov_lane_size.rs  arm32_vrint_mode.rs  arm32_vsel_condition.rs  armt32_cps_primask_effect.rs  armt32_index_mode.rs  armt32_instruction_condition.rs  armt32_memory_barrier_option.rs  armt32_opcode_pattern_16bit.rs  armt32_opcode_pattern_32bit.rs  armt32_parallel_arithmetic.rs  armt32_register_shift.rs  armt32_special_register.rs  floating_point_data_operations.rs  floating_point_registers.rs
scaleservers-arm32-assembly/src/errors/: decode_error.rs  encode_error.rs
scaleservers-arm32-assembly/src/targets/: arm_cpu_feature.rs  arm_instruction_requirement.rs  arm_isa_version.rs  arm_target_profile.rs
scaleservers-arm32-assembly/src/tests/: adc_instruction_tests.rs  add_instruction_tests.rs  adr_instruction_tests.rs  and_instruction_tests.rs  arma32_tests.rs  armv7em_tests.rs  armv7m_tests.rs  armv8m_tests.rs  asr_instruction_tests.rs  b_instruction_tests.rs  bic_instruction_tests.rs  bkpt_instruction_tests.rs  bl_instruction_tests.rs  blx_instruction_tests.rs  bx_instruction_tests.rs  cmn_instruction_tests.rs  cmp_instruction_tests.rs  coverage_tests.rs  cps_instruction_tests.rs  dmb_instruction_tests.rs  dsb_instruction_tests.rs  emit_coverage_t32_tests.rs  emit_coverage_tests.rs  emit_tests.rs  encode_error_tests.rs  eor_instruction_tests.rs  hlt_instruction_tests.rs  isb_instruction_tests.rs  ldm_instruction_tests.rs  ldr_instruction_tests.rs  ldrb_instruction_tests.rs  ldrh_instruction_tests.rs  ldrsb_instruction_tests.rs  ldrsh_instruction_tests.rs  lsl_instruction_tests.rs  lsr_instruction_tests.rs  modified_immediate_tests.rs  mov_instruction_tests.rs  mrs_instruction_tests.rs  msr_instruction_tests.rs  (+32 more)
scaleservers-arm32-assembly/src/utils/: armt32_instruction_decoder.rs  armt32_instruction_encoder.rs  gpr_coding_utils.rs  sign_extension_utils.rs
scaleservers-arm32-assembly/tests/: differential_oracle_a32.rs  differential_oracle_mve.rs  differential_oracle_t32.rs
scaleservers-arm32-assembly/tests/common/: mod.rs
scaleservers-arm64-assembly/: Cargo.toml
scaleservers-arm64-assembly/src/: arm64_instruction.rs  bitmask_immediate.rs  emit.rs  enums.rs  float_immediate.rs  lib.rs  targets.rs
scaleservers-arm64-assembly/src/emit/: arm64_assembly_emitter.rs  arm_assembly_syntax.rs
scaleservers-arm64-assembly/src/enums/: arm64_atomic_op.rs  arm64_atomic_ordering.rs  arm64_barrier_option.rs  arm64_branch_record_buffer_op.rs  arm64_cmp_branch_cond.rs  arm64_complex_rotation.rs  arm64_condition.rs  arm64_crc32_op.rs  arm64_cssc_min_max_op.rs  arm64_cssc_unary_op.rs  arm64_extend_option.rs  arm64_float_precision.rs  arm64_float_register.rs  arm64_fp8_convert_long_op.rs  arm64_fp_to_int_round_op.rs  arm64_fprcvt_op.rs  arm64_gcs_exception_op.rs  arm64_gcs_register_op.rs  arm64_imm9_mode.rs  arm64_load_store_index.rs  arm64_load_store_size.rs  arm64_lse128_op.rs  arm64_lsfe_op.rs  arm64_mops_stage.rs  (+132 more)
(+10 files in other folders)
