# Copyright (c) Scaleservers LLC
# Licensed under MIT OR Apache-2.0 (see LICENSE-MIT and LICENSE-APACHE).

[package]
name = "scaleservers-arm32-assembly"
version = "0.9.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/scaleservers/scaleservers-arm32-assembly-lib-rs"

[features]
# Default build is `std`. The crate is feature-gated `no_std`-capable: `--no-default-features` builds
# against `core` + `alloc` only. Tests run under the default (`std`) features.
default = ["std"]
std = []

[dependencies]
# Intentionally dependency-free.
