# Copyright (c) Scaleservers LLC
# Licensed under MIT OR Apache-2.0 (see LICENSE-MIT and LICENSE-APACHE).

[package]
name = "scaleservers-arm32-assembly"
version = "1.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "ARM 32-bit assembly encode/decode library covering BOTH instruction states: Thumb/T32 (the full M-profile line from ARMv6-M through ARMv8.1-M, with the DSP, TrustZone-M security, low-overhead-loop, scalar floating-point and MVE/Helium vector extensions) and ARM/A32 (the A-profile ARM state through ARMv8-A, with VFP and Advanced SIMD / NEON). encode and decode are exact inverses; adds UAL text emission (GNU or LLVM flavor) and target-profile gating that restricts the emittable set to a chosen processor. Zero runtime dependencies, no_std-capable, dual-oracle (GNU + LLVM) validated."
repository = "https://github.com/scaleservers/scaleservers-arm-assembly"

[features]
# Default build is `std`. The crate is feature-gated `no_std`-capable: `--no-default-features` builds
# against `core` + `alloc` only. Tests run under the default (`std`) features.
default = ["std"]
std = []

[dependencies]
# Intentionally dependency-free.
